--- a/sms_relay/templates/base.html
+++ b/sms_relay/templates/base.html
@@ -7,6 +7,7 @@
 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="/static/css/smsrelay.css" rel="stylesheet">
+
 </head>
 <body class="{{ page }}">
 
@@ -21,6 +22,8 @@
 </div>
 <script type="text/javascript" src="/static/js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 <script type="text/javascript">
 $(document).ready(function (){
     {% block extra_js %}{% endblock %}
