--- a/sms_relay/templates/dashboard.html
+++ b/sms_relay/templates/dashboard.html
@@ -19,11 +19,9 @@
         </div>
     <legend>Sms recents</legend>
     <div class="row-fluid">
-            <form id="filter_nb">{% csrf_token %}
                 <div class="input-append">
                 <input class="span4" type="text" name="number" id="input_id" value="10" /><button id="number" class="btn " type="button">Afficher</button>
                 </div>
-            </form>
     </div>
     <div class="row-fluid">
            <table class="table table-hover table-bordered table-striped">
@@ -48,7 +46,7 @@
 
 {% block extra_js %}
 
- $("#number").click(function () {
+function get_incomingsms() {
     var number = $("#input_id").val();
     $.getJSON('/incomingsms/' + number, function(data) {
         $("#incomingsms_table").empty();
@@ -62,7 +60,18 @@
             $("#incomingsms_table").append(row);
         });
     });
+};
+
+get_incomingsms();
+
+$("#number").click(function () {
+    get_incomingsms();
 });
+
+$("#input_id").on('change', function (){
+    get_incomingsms();
+})
+
 $(function () {
     $.getJSON('/graph_data/', function(data) {
         $('#container').highcharts({
