--- a/sms_relay/templates/base.html
+++ b/sms_relay/templates/base.html
@@ -22,8 +22,8 @@
 </div>
 <script type="text/javascript" src="/static/js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="/static/js/highcharts.js"></script>
+<script src="/static/js/exporting.js"></script>
 <script type="text/javascript">
 $(document).ready(function (){
     {% block extra_js %}{% endblock %}
